--- a/style.css
+++ b/style.css
@@ -6,3 +6,33 @@ body {
     font-size: 21px;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+#main {
+    margin: 5em;
+    border: 0.25em solid black;
+}
+
+#start {
+    margin-left: 1em;
+    margin-right: 1em;
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+}
+
+#btn {
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
+
+h2, h3 {
+    display: flex;
+    justify-content: center;
+    margin-left: 1em;
+    margin-right: 1em;
+}
