--- a/style.css
+++ b/style.css
@@ -36,3 +36,15 @@ h2, h3 {
     margin-left: 1em;
     margin-right: 1em;
 }
+
+#question-title {
+    
+}
+
+.answers-container {
+
+}
+
+#answer {
+
+}
