--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     font-size: 30px;
 }
 
-#btn-start {
+#btnStart {
     margin-left: 1em;
     margin-right: 1em;
     margin-bottom: 1em;
@@ -37,12 +37,12 @@ h2, h3 {
     margin-right: 1em;
 }
 
-#question-title {
+#questionTitle {
     font-size:30px;
     color:black;
 }
 
-.answers-container {
+.answersContainer {
     background-color: blanchedalmond;
     border: 0.25em black solid;
     font-size: 22px;
@@ -60,7 +60,7 @@ h2, h3 {
     font-size:larger;
 }
 
-#high-scores {
+#highScores {
     text-emphasis: bolder;
     text-decoration: underline;
     font-size: 30px;
@@ -74,7 +74,7 @@ p {
     margin-bottom: 0.5em;
 }
 
-#play-again {
+#playAgain {
     margin-left: 47%;
     margin-top:1em;
 }
